<resources>
    <string name="app_name">SportHub</string>

<!--    <string name="facebook_app_id"></string> Not needed -->
<!--    <string name="fb_login_protocol_scheme"></string> Not needed -->
<!--    <string name="facebook_client_token"></string> Not needed -->

    <!--    <string name="serverClientIdForGoogle"></string>   uncomment and add the api key-->

<!--    <string name="google_maps_API_key"></string>  uncomment and add the api key-->


    <string name="title_activity_main_menu">MainMenuActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="levels">
        <item>Επίπεδο 1</item>
        <item>Επίπεδο 2</item>
        <item>Επίπεδο 3</item>
        <item>Επίπεδο 4</item>
        <item>Επίπεδο 5</item>
        <item>Επίπεδο 6</item>
    </string-array>

    <string-array name="levels_with_short_text">
        <item>Επιπ: 1</item>
        <item>Επιπ: 2</item>
        <item>Επιπ: 3</item>
        <item>Επιπ: 4</item>
        <item>Επιπ: 5</item>
        <item>Επιπ: 6</item>
    </string-array>


    <string name="I_WANT_NOTIFICATIONS">Θέλω ειδοποιήσεις</string>
    <string name="HOURS_3_GREEK_TEXT">3 Ώρες</string>
    <string name="DAY_1_GREEK_TEXT">1 Ημέρα</string>
    <string name="DAY_3_GREEK_TEXT">3 Ημέρες</string>
    <string name="FOREVER_GREEK_TEXT">Για πάντα</string>

    <string name="HOUR_1_GREEK_TEXT">1 Ώρα</string>
    <string name="HOUR_1_AND_HALF_GREEK_TEXT">1 Ώρα και 30 λεπτά</string>
    <string name="HOURS_2_GREEK_TEXT">2 Ώρες</string>
    <string name="HOURS_2_AND_HALF_GREEK_TEXT">2 Ώρες και 30 λεπτά</string>
    <!--    <string name="HOURS_3_GREEK_TEXT">3 Ώρες</string>-->
    <string name="HOURS_3_AND_MORE_GREEK_TEXT">+3 Ώρες</string>

    <string name="I_HAVE_CERTAIN_TERRAIN">Ξέρω γήπεδο με <u>σίγουρη</u> διαθεσιμότητα (Ναι)</string>
    <string name="I_HAVE_NOT_CERTAIN_TERRAIN">Ξέρω γήπεδο με <u>όχι σίγουρη</u> διαθεσιμότητα (ίσως)</string>
    <string name="I_DONT_HAVE_TERRAIN"><u>Δεν ξέρω</u> κάποιο γήπεδο. (Όχι)</string>

    <string name="I_HAVE_CERTAIN_TERRAIN_SHORT_FORM">Ναι</string>
    <string name="I_HAVE_NOT_CERTAIN_TERRAIN_SHORT_FORM">ίσως</string>
    <string name="I_DONT_HAVE_TERRAIN_SHORT_FORM">Όχι</string>


    <string name="I_HAVE_CERTAIN_TERRAIN_FILTER">Γήπεδο με <u>σίγουρη</u> διαθεσιμότητα <font color='#43C847'>(Ναι)</font></string>
    <string name="I_HAVE_NOT_CERTAIN_TERRAIN_FILTER">Γήπεδο με <u>όχι σίγουρη</u> διαθεσιμότητα <font color='#FFA726'>(ίσως)</font></string>
    <string name="I_DONT_HAVE_TERRAIN_FILTER"><u>Χωρίς</u> γήπεδο <font color='#FF0000'>(Όχι)</font></string>


    <string name="NO_TERRAIN_DECLARED_BY_ADMIN"><u>Δεν έχει δηλωθεί γήπεδο</u>\n<u>Μπορείτε να προτείνετε γήπεδο στον διαχειριστή!</u></string>

    <string name="IF_NO_ACCOUNT_SIGN_UP">Δεν έχετε λογαριασμό;\n<u>Εγγραφή</u></string>

    <string name="IF_ACCOUNT_SIGN_IN">Έχετε λογαριασμό;\n<u>Σύνδεση</u></string>

    <string name="ALERT_DIALOG_CLOSED_REOPEN_IT">Κλείσατε το παράθυρο; <u>Άνοιγμα</u></string>


    <string-array name="days_of_week">
        <item>Δευ</item> <!-- Monday -->
        <item>Τρι</item> <!-- Tuesday -->
        <item>Τετ</item> <!-- Wednesday -->
        <item>Πεμ</item> <!-- Thursday -->
        <item>Παρ</item> <!-- Friday -->
        <item>Σαβ</item> <!-- Saturday -->
        <item>Κυρ</item> <!-- Sunday -->
    </string-array>

    <string name="home">Αρχική</string>
    <string name="chat">Συνομιλίες</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>