<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_with_borders"
    android:padding="3dp"
    >


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Διάρκεια αγώνα"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_button" />



    <ImageView
        android:id="@+id/back_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:padding="15dp"
        android:src="@drawable/x_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_duration_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <TextView
                android:id="@+id/hour1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingStart="20dp"
                android:text="@string/HOUR_1_GREEK_TEXT"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">
<!--            CB1BEC22-->
            <TextView
                android:id="@+id/hour2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingStart="20dp"
                android:text="@string/HOURS_2_GREEK_TEXT"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/hour3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingStart="20dp"
                android:text="@string/HOURS_3_GREEK_TEXT"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
