<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_or_black_primary_total"
    tools:context=".activities.edits.matchdetails.EditMatchDurationActivity">


    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/button_change_match_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_duration_options" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="15dp"
            android:padding="12dp"
            android:src="@drawable/arrow_back_icon"
            app:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Επεξεργασία\nδιάρκειας αγώνα"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="?attr/colorOnPrimary"
            android:alpha="0.22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Διάρκεια αγώνα"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <LinearLayout
        android:id="@+id/layout_duration_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="23dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <TextView
                android:id="@+id/hour1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="18dp"
                android:paddingStart="20dp"
                android:text="@string/HOUR_1_GREEK_TEXT"
                android:textSize="19sp"
                android:textStyle="bold" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/hour2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="18dp"
                android:paddingStart="20dp"
                android:text="@string/HOURS_2_GREEK_TEXT"
                android:textSize="19sp"
                android:textStyle="bold" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/hour3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="18dp"
                android:paddingStart="20dp"
                android:text="@string/HOURS_3_GREEK_TEXT"
                android:textSize="19sp"
                android:textStyle="bold" />

        </FrameLayout>


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_change_match_duration"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:text="Αποθήκευση"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_duration_options"
        app:shapeAppearanceOverlay="@style/CustomButtonShapeAppearance"
        app:strokeColor="@color/green"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>